# depgraph

./: Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  SOURCES.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
demos/: deps.json
demos/01-basic/: SCENARIO.md  requirements.txt
demos/01-typosquat-attack/: SCENARIO.md  deps.json
demos/02-deep/: SCENARIO.md  package.json  requirements.txt
demos/02-healthy-dependencies/: SCENARIO.md  deps.json
demos/03-legacy-stack-cves/: SCENARIO.md  deps.json
depgraph/: __init__.py  __main__.py  cli.py  connect.py  core.py  enrich.py  mcp_server.py
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  DEPLOY.md  INSTALL.md
examples/: feeds.txt  help.txt  version.txt
ports/: README.md
ports/go/: go.mod  main.go  main_test.go
ports/javascript/: index.js  package.json  test.js
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
ports/shell/: depgraph.sh  test.sh
scripts/: ports-test.sh
tests/: test_connect.py  test_datafeeds.py  test_deep.py  test_enrich.py  test_hardening.py  test_ports.py  test_smoke.py  test_vulndb_local.py
