[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-depgraph"
version = "2.1.0"
description = "Dependency risk visualizer — Scorecard + OSV + typosquat + maintainer signals"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["dev-supply-chain", "cognis-digital", "cognis-neural-suite", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/depgraph"

[project.scripts]
"depgraph-emit" = "depgraph.connect:emit_main"
depgraph = "depgraph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["depgraph"]
artifacts = [
    "depgraph/cognis_vulndb.jsonl.gz",
    "depgraph/data_feeds_2026.json",
]

[tool.hatch.build.targets.wheel.force-include]
"depgraph/cognis_vulndb.jsonl.gz" = "depgraph/cognis_vulndb.jsonl.gz"
"depgraph/data_feeds_2026.json" = "depgraph/data_feeds_2026.json"

[tool.hatch.metadata]
allow-direct-references = true
